--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,27 @@
 
 /* Your CSS Code here. */
+
+.holder{
+	display:flex;
+	justify-content:space-between;
+	flex-wrap:wrap;
+	
+}
+
+.item{
+	width:70px;
+	height:70px;
+	border:2px solid black;
+}
+
+#b1{
+	background-color:green;
+}
+
+#b3{
+	background-color:blue;
+}
+
+#b2{
+	background-color:red;
+}
